deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-argocd-example
  namespace: argocd-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
        - |
          [...]
