service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-argocd-example
  namespace: argocd-example
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
