ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-example
  namespace: argocd-example
spec:
  ingressClassName: nginx
  rules:
  - host: example.suleyman.lab
    http:
      paths:
      - backend:
          service:
            name: nginx-argocd-example
            port:
              number: 80
        path: /
        pathType: Prefix
